fix group collapse, imptove ui unlock control for user, debounce checkboxes, clean up characterisctics

--- a/source/styles/components/_filter-tags.less
+++ b/source/styles/components/_filter-tags.less
@@ -24,7 +24,6 @@ filter-tags {
         padding: 1px;
     }
     .filter-tags-group {
-        overflow: hidden;
         border-bottom: 1px solid @gray-light;
         padding: 2px 0;
         background-color: #fff;
